--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,29 +7,6 @@ on:
     branches: [ main ]
 
 jobs:
-  test-scripts:
-    name: Test Shell Scripts
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install ShellCheck
-        run: |
-          echo "INFO ==>: Installing ShellCheck..."
-          sudo apt-get update
-          sudo apt-get install -y shellcheck
-
-      - name: Run ShellCheck on all scripts
-        run: |
-          echo "INFO ==>: Checking shell scripts syntax..."
-          find . -type f -name "*.sh" -not -path "./.*" | while read -r script; do
-            echo "INFO ==>: Checking $script"
-            shellcheck "$script" || exit 1
-          done
-          echo "INFO ==>: All scripts passed ShellCheck!"
-
   test-documentation:
     name: Test Markdown Documentation
     runs-on: ubuntu-latest
@@ -179,7 +156,7 @@ jobs:
   summary:
     name: Build Summary
     runs-on: ubuntu-latest
-    needs: [test-scripts, test-documentation, test-on-macos, test-project-structure]
+    needs: [test-documentation, test-on-macos, test-project-structure]
 
     steps:
       - name: Success message
@@ -188,7 +165,6 @@ jobs:
           echo "║                                        ║"
           echo "║  ✅ All CI checks passed!             ║"
           echo "║                                        ║"
-          echo "║  - Shell scripts validated ✓           ║"
           echo "║  - Documentation checked ✓             ║"
           echo "║  - macOS compatibility tested ✓        ║"
           echo "║  - Project structure verified ✓        ║"
